fixes #708, corrects date picker z-index for modals

--- a/app/assets/stylesheets/hitobito/modules/_ui-datepicker.scss
+++ b/app/assets/stylesheets/hitobito/modules/_ui-datepicker.scss
@@ -1,7 +1,8 @@
 // higher z-index than popover (1010)
 
 .ui-datepicker {
-  z-index: 1011 !important;
+  // must be higher than modal at #1040
+  z-index: 1050 !important;
 }
 
 .ui-datepicker td .ui-state-default:hover {
